welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:8: error: overloaded method value >= with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (Unit)
	if(suite(i-1) >= nbOccurs(suite,i-1))
                      ^